@@ -1334,6 +1334,11 @@ DECL|field|version
 name|long
 name|version
 decl_stmt|;
+DECL|field|isOptimized
+specifier|final
+name|boolean
+name|isOptimized
+decl_stmt|;
 DECL|method|ReaderCommit
 name|ReaderCommit
 parameter_list|(
@@ -1441,6 +1446,36 @@ operator|.
 name|getGeneration
 argument_list|()
 expr_stmt|;
+name|isOptimized
+operator|=
+name|infos
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
+operator|&&
+operator|!
+name|infos
+operator|.
+name|info
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|hasDeletions
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|isOptimized
+specifier|public
+name|boolean
+name|isOptimized
+parameter_list|()
+block|{
+return|return
+name|isOptimized
+return|;
 block|}
 DECL|method|getSegmentsFileName
 specifier|public
