@@ -2285,6 +2285,11 @@ DECL|field|generation
 name|long
 name|generation
 decl_stmt|;
+DECL|field|isOptimized
+specifier|final
+name|boolean
+name|isOptimized
+decl_stmt|;
 DECL|method|CommitPoint
 specifier|public
 name|CommitPoint
@@ -2410,6 +2415,36 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|isOptimized
+operator|=
+name|segmentInfos
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
+operator|&&
+operator|!
+name|segmentInfos
+operator|.
+name|info
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|hasDeletions
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|isOptimized
+specifier|public
+name|boolean
+name|isOptimized
+parameter_list|()
+block|{
+return|return
+name|isOptimized
+return|;
 block|}
 DECL|method|getSegmentsFileName
 specifier|public
