@@ -387,6 +387,10 @@ DECL|field|numOnCommit
 name|int
 name|numOnCommit
 decl_stmt|;
+DECL|field|dir
+name|Directory
+name|dir
+decl_stmt|;
 DECL|method|onInit
 specifier|public
 name|void
@@ -413,7 +417,69 @@ parameter_list|(
 name|List
 name|commits
 parameter_list|)
+throws|throws
+name|IOException
 block|{
+name|IndexCommit
+name|lastCommit
+init|=
+operator|(
+name|IndexCommit
+operator|)
+name|commits
+operator|.
+name|get
+argument_list|(
+name|commits
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
+name|IndexReader
+name|r
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"lastCommit.isOptimized()="
+operator|+
+name|lastCommit
+operator|.
+name|isOptimized
+argument_list|()
+operator|+
+literal|" vs IndexReader.isOptimized="
+operator|+
+name|r
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|,
+name|r
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|,
+name|lastCommit
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 name|verifyCommitOrder
 argument_list|(
 name|commits
@@ -1355,6 +1421,12 @@ operator|new
 name|RAMDirectory
 argument_list|()
 decl_stmt|;
+name|policy
+operator|.
+name|dir
+operator|=
+name|dir
+expr_stmt|;
 name|IndexWriter
 name|writer
 init|=
@@ -1392,6 +1464,15 @@ operator|.
 name|setUseCompoundFile
 argument_list|(
 name|useCompoundFile
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|setMergeScheduler
+argument_list|(
+operator|new
+name|SerialMergeScheduler
+argument_list|()
 argument_list|)
 expr_stmt|;
 for|for
