@@ -8076,6 +8076,70 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|assertFalse
+argument_list|(
+name|r2
+operator|.
+name|getIndexCommit
+argument_list|()
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r2
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|writer
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|d
+argument_list|,
+operator|new
+name|StandardAnalyzer
+argument_list|()
+argument_list|,
+literal|false
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|LIMITED
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|r2
+operator|=
+name|r
+operator|.
+name|reopen
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|r2
+operator|.
+name|getIndexCommit
+argument_list|()
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|r
 operator|.
 name|close
